# util_image

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  util_image.sln
.github/workflows/: pragma-generic-ci.yml  pragma-linux-ci.yml  pragma-windows-ci.yml
cmake/modules/: Findispctc.cmake
include/: util_image.h  util_image.hpp  util_image_buffer.hpp  util_image_definitions.hpp  util_image_png.hpp  util_image_tga.hpp  util_image_types.hpp  util_texture_info.hpp
src/: compressor.cpp  compressor.hpp  definitions.hpp  image.cpp  image_buffer.cpp  image_buffer_tonemapping.cpp  load.cpp  main.cpp  pixel_view.cpp  png.cpp  size.cpp  stb_image.cpp  stb_image.h  stb_image_resize.h  stb_image_write.h  texture.cpp  tga.cpp  util_bake.cpp  util_image.cpp  util_image.cppm  util_image_buffer.cpp  util_image_buffer_tonemapping.cpp  util_image_convert.cpp  util_image_load.cpp  util_image_png.cpp  util_image_size.cpp  util_image_texture.cpp  util_image_texture_compressor.hpp  util_image_texture_compressor_compressonator.cpp  util_image_texture_compressor_nvtt.cpp  util_image_tga.cpp  util_pixel_view.cpp
src/compressors/: compressonator.cpp  compressonator.hpp  ispctc.cpp  ispctc.hpp  nvtt.cpp  nvtt.hpp
src/implementation/: bake.cpp  buffer.cpp  buffer_tonemapping.cpp  compressor.cpp  definitions.hpp  image.cpp  image_size.cpp  pixel_view.cpp  png.cpp  size.cpp  stb_image.cpp  texture.cpp  texture_compressor.cppm  texture_compressor_compressonator.cpp  texture_compressor_compressonator.hpp  texture_compressor_nvtt.cpp  texture_compressor_nvtt.hpp  tga.cpp
src/implementation/compressors/: compressonator.cpp  ispctc.cpp  nvtt.cpp
src/interface/: buffer.cppm  compressor.cppm  core.cppm  image.cppm  image_buffer.cppm  image_png.cppm  image_tga.cppm  image_types.cppm  png.cppm  texture_info.cppm  tga.cppm  types.cppm  util_image.cppm
src/interface/compressors/: compressonator.cppm  ispctc.cppm  nvtt.cppm
src/nv_dds/: nv_dds.cpp  nv_dds.h
util_image/: util_image.vcxproj  util_image.vcxproj.filters
